infra/k8s/comments-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
      - name: comments
        image: marciosouza/comments
---
apiVersion: v1
kind: Service
metadata:
  name:  comments-clusterip-srv
spec:
  type:  ClusterIP
  selector:
    app:  comments
  ports:
  - name:  comments
    port:  4001
    targetPort:  4001
