infra/k8s/moderation-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
      - name: moderation
        image: marciosouza/moderation
---
apiVersion: v1
kind: Service
metadata:
  name:  moderation-clusterip-srv
spec:
  type:  ClusterIP
  selector:
    app:  moderation
  ports:
  - name:  moderation
    port:  4003
    targetPort:  4003
